--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,14 @@ slack-bolt==1.18.0
 slack-sdk==3.26.1
 python-dotenv==1.0.0
 openai==1.3.5
-PyMuPDF==1.23.7
+PyMuPDF==1.23.8
 tinydb==4.8.0
+python-jose[cryptography]==3.3.0
+httpx==0.25.2
 python-multipart==0.0.6
-requests==2.31.0
+pydantic==2.5.2
 
 # Testing dependencies
 pytest==7.4.3
 pytest-asyncio==0.21.1
-httpx==0.25.1
 pytest-cov==4.1.0
